--- a/src/view/index.html
+++ b/src/view/index.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%= require('html-loader!./layout/html-head.html') %>
+    <head>
+        <%= require('html-loader!./layout/head-common.html') %>
+        <title>ZZMALL电商平台</title>
+    </head>
 <body>
-        <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
-    <!-- <script type="text/javascript" src="../../dist/js/index.js"></script> -->
+    <%= require('html-loader!./layout/nav.html') %>    
+    <%= require('html-loader!./layout/header.html') %>
+    
+    <div class="wrap w">
+        <%= require('html-loader!./layout/nav-side.html') %>
+        <div class="content with-nav">test</div>        
+    </div>
+
+
+
+
+    <%= require('html-loader!./layout/footer.html') %>    
 </body>
 </html>
