--- a/src/view/login.html
+++ b/src/view/login.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<%= require('html-loader!./layout/html-head.html') %>
+    <head>
+        <%= require('html-loader!./layout/head-common.html') %>
+        <title>ZZMALL登陆</title>
+    </head>
 <body>
-    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+    Hello login.html
+
+    <%= require('html-loader!./layout/footer.html') %>    
 </body>
 </html>
