--- a/src/view/user-login.html
+++ b/src/view/user-login.html
@@ -28,7 +28,7 @@
                         </label>
                         <input id="password" type="password" class="user-content" placeholder="请输入密码" autocomplete="off">
                     </div>
-                    <a class="btn btn-submit">登陆</a>
+                    <a id="submit" class="btn btn-submit">登陆</a>
                     <div class="link-item">
                         <a href="./user-pass-reset.html" class="link" target="_blank">忘记密码</a>
                         <a href="./user-register.html" class="link" target="_blank">免费注册</a>
