--- a/src/view/result.html
+++ b/src/view/result.html
@@ -17,7 +17,15 @@
         <div class="result-con register-success">
             <h1 class="result-title">恭喜您，注册成功</h1>
             <div class="result-content">
-                <a href="./index.html" class="link">回到首页</a>
+                <a href="./index.html" class="link">回到首页</a>                
+                <a href="./user-login.html" class="link">立即登录</a>
+            </div>
+        </div>
+        <div class="result-con pass-reset-success">
+            <h1 class="result-title">恭喜您，密码修改成功</h1>
+            <div class="result-content">
+                <a href="./index.html" class="link">回到首页</a>                
+                <a href="./user-login.html" class="link">立即登录</a>
             </div>
         </div>   
     </div>
