添加个人中心

--- a/src/view/layout/header.html
+++ b/src/view/layout/header.html
@@ -1,6 +1,6 @@
 <div class="header">
     <div class="w">
-        <a class="logo">ZZMall</a>
+        <a href="./index.html" class="logo">ZZMall</a>
         <div class="search-con">
             <input id="search-input" type="text" class="search-input" placeholder="请输入商品名称">
             <button class="btn search-btn" id="search-btn">搜索</button>
