--- a/src/page/common/header/index.css
+++ b/src/page/common/header/index.css
@@ -12,6 +12,7 @@
     font-size: 36px;
     color: #c60023;
     font-weight: bold;
+    text-decoration: none;
 }
 
 .header .search-con{
@@ -30,4 +31,14 @@
     position: absolute;
     height: 44px;
     width: 80px;
+}
+/* 面包屑导航 */
+.crumb{
+    margin-bottom: 15px;
+    height: 50px;
+    line-height: 50px;
+    background: #eee;
+    color: #888;
+    font-size: 14px;
+    border-top: 2px solid #c60023;
 }
