--- a/src/view/about.html
+++ b/src/view/about.html
@@ -17,13 +17,10 @@
             </div>
         </div>
         <div class="page-wrap w">
-            <%= require('html-loader!./layout/nav-side.html')  %>
-            <div class="content with-nav">
-                <div class="panel">
-                    <div class="panel-title">个人中心</div>
-                    <div class="panel-body">
-                        <div class="loading"></div>
-                    </div>
+            <div class="panel">
+                <h1 class="panel-title">关于我们</h1>
+                <div class="panel-body">
+                    欢迎访问happymmall。这是一个电商教学演示网站。
                 </div>
             </div>
         </div>
