--- a/src/view/index.html
+++ b/src/view/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head> 
         <%= require('html-loader!./layout/head-common.html')  %>
-        <title>MMall电商平台 - 最NX的购物网站</title>
+        <title>ZZMall电商平台 - 电商购物网站</title>
     </head>
     <body>
         <%= require('html-loader!./layout/nav.html')  %>
