--- a/src/view/about.html
+++ b/src/view/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <%= require('html-loader!./layout/head-common.html')  %>
-        <title><%= htmlWebpackPlugin.options.title%> - MMall电商平台</title>
+        <title><%= htmlWebpackPlugin.options.title%> - ZZMall电商平台</title>
     </head>
     <body>
         <%= require('html-loader!./layout/nav.html')  %>
@@ -10,7 +10,7 @@
         <div class="crumb">
             <div class="w">
                 <div class="crumb-con">
-                    <a class="link" href="./index.html">MMall</a>
+                    <a class="link" href="./index.html">ZZMall</a>
                     <span>></span>
                     <span class="link-text"><%= htmlWebpackPlugin.options.title%></span>
                 </div>
@@ -20,7 +20,7 @@
             <div class="panel">
                 <h1 class="panel-title">关于我们</h1>
                 <div class="panel-body">
-                    欢迎访问happymmall。这是一个电商教学演示网站。
+                    欢迎访问ZZMall。这是一个电商演示网站。
                 </div>
             </div>
         </div>
